# ddgsearch

./: LICENSE  README.md  main.py  pyproject.toml
ddgsearch/: __init__.py  ddg.py  llm.py  metrics.py  scrape.py  utils.py
results/: search_summary.json  web_page_1.md  web_page_2.md
tests/: test_search.py
