[project]
name = "ddgsearch"
version = "0.1.0"
description = "DuckDuckGo search and web scraping library optimized for LLM context"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "trafilatura>=2.0.0",
    "pypdf>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools.packages.find]
include = ["ddgsearch*"]
exclude = ["results*", "tests*"]
